domain-monitor/service.yml
apiVersion: v1
kind: Service
metadata:
  name: domain-monitor
  namespace: domain-monitor
  labels:
    app: domain-monitor
spec:
  type: ClusterIP
  selector:
    app: domain-monitor
  ports:
    - name: http
      port: 80
      targetPort: 80
