domain-monitor/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-monitor
  namespace: domain-monitor
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - domain-monitor.apps.k8s.enros.me
      secretName: domain-monitor-tls
  rules:
    - host: domain-monitor.apps.k8s.enros.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: domain-monitor
                port:
                  number: 80
